<resources>
    <string name="app_name">Event Search</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="keyword">Keyword</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="from">From</string>
    <string name="_10">10</string>
    <string name="current_location">Current location</string>
    <string name="other_specify_location">Other, Specify Location</string>
    <string name="typw_in_the_location">Typw in the Location</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="type_in_the_location">Type in the location</string>
    <string name="search_result">search result</string>
    <string name="eventname">eventname</string>
    <string name="venuename">venuename</string>
    <string name="time">time</string>
    <string name="date">date</string>

    <string-array name="categories">
        <item>All</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Arts</item>
        <item>Theater</item>
        <item>Film</item>
        <item>Miscellaneous</item>
    </string-array>

    <string-array name="units">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>

    <string-array name="sortby">
        <item>Default</item>
        <item>Event Name</item>
        <item>Time</item>
        <item>Atrist</item>
        <item>Type</item>
    </string-array>

    <string-array name="acend">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string name="title_activity_detail_page">DetailPageActivity</string>
    <string name="event">Event</string>
    <string name="artist_s">Artist(s)</string>
    <string name="venue">VENUE</string>
    <string name="upcoming">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="popularity">Popularity</string>
    <string name="check_at">Check At</string>
    <string name="spotify">Spotify</string>
    <string name="favorite">favorite</string>
    <string name="twitter" />
    <string name="searching_events">Searching Events ...</string>
    <string name="atirst_team_s">Atirst/Team(s)</string>

</resources>
