<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyword"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />

    <AutoCompleteTextView
        android:id="@+id/keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:hint="@string/enter_keyword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyword"
        android:layout_alignParentStart="true"
        android:text="@string/category"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_alignParentStart="true"
        android:text="@string/distance"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/_10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Spinner
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radius"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/unit"
        android:layout_alignParentStart="true"
        android:text="@string/from"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <RadioGroup
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <RadioButton
            android:id="@+id/here"
            android:text="@string/current_location"
            android:textSize="24sp"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/other_specify_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/there"
            android:textSize="24sp"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/specifylocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/type_in_the_location"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginStart="40dp"
        android:enabled="false"
        android:layout_marginRight="10dp"

        />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specifylocation"
        android:layout_alignParentStart="true"
        android:text="@string/search"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specifylocation"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/search"
        android:text="@string/clear"
        android:layout_margin="10dp"/>


</RelativeLayout>