<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabArtist">

    <TextView
        android:id="@+id/atris1_name0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atris1_name0">

    <TableLayout
        android:id="@+id/artist1_spotify"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="2dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/atris1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/followers"/>
            <TextView
                android:id="@+id/atris1_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/popularity"/>
            <TextView
                android:id="@+id/atris1_popilarity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:text="@string/check_at"/>
            <TextView
                android:id="@+id/atris1_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spotify"/>
        </TableRow>
    </TableLayout>
    </RelativeLayout>


</RelativeLayout>