<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".TabArtist">

        <TextView
            android:id="@+id/atris1_name0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <RelativeLayout
            android:id="@+id/atrist1_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/searchingspotify_artist1">

                <ProgressBar
                    android:id="@+id/progressBarArtist1Spotify"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/progressBarArtist1Spotify"
                    android:text="Searching..." />

            </RelativeLayout>

            <TableLayout
                android:id="@+id/artist1_spotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                >

                <TableRow
                    android:id="@+id/atris1_name_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/atris1_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>

                </TableRow>

                <TableRow
                    android:id="@+id/atris1_follower_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/followers"/>
                    <TextView
                        android:id="@+id/atris1_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                </TableRow>

                <TableRow
                    android:id="@+id/atris1_popilarity_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/popularity"/>
                    <TextView
                        android:id="@+id/atris1_popilarity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                </TableRow>

                <TableRow
                    android:id="@+id/atris1_url_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/check_at"/>
                    <TextView
                        android:id="@+id/atris1_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spotify"/>
                </TableRow>
            </TableLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/atrist1_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/searchingphoto_artist1">

                <ProgressBar
                    android:id="@+id/progressBarPhotoArtist1"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/progressBarPhotoArtist1"
                    android:text="Searching..." />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo1"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo2"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo3"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo4"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo5"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo6"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo7"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist1_photo8"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/no_result_message_photo1"
                android:visibility="gone"
                android:textAlignment="center"
                android:text="no result"/>



        </RelativeLayout>

        <TextView
            android:id="@+id/atris2_name0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <RelativeLayout
            android:id="@+id/atrist2_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/searchingspotify_artist2">

                <ProgressBar
                    android:id="@+id/progressBarArtist2Spotify"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/progressBarArtist2Spotify"
                    android:text="Searching..." />

            </RelativeLayout>

            <TableLayout
                android:id="@+id/artist2_spotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                >

                <TableRow
                    android:id="@+id/atris2_name_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/atris2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>

                </TableRow>

                <TableRow
                    android:id="@+id/atris2_follower_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/followers"/>
                    <TextView
                        android:id="@+id/atris2_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                </TableRow>

                <TableRow
                    android:id="@+id/atris2_popilarity_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/popularity"/>
                    <TextView
                        android:id="@+id/atris2_popilarity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                </TableRow>

                <TableRow
                    android:id="@+id/atris2_url_row"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textStyle="bold"
                        android:text="@string/check_at"/>
                    <TextView
                        android:id="@+id/atris2_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spotify"/>
                </TableRow>
            </TableLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/searchingphoto_artist2">

                <ProgressBar
                    android:id="@+id/progressBarPhotoArtist2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/progressBarPhotoArtist2"
                    android:text="Searching..." />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:id="@+id/atrist2_photo1"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:id="@+id/atrist2_photo2"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:id="@+id/atrist2_photo3"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist2_photo4"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist2_photo5"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist2_photo6"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist2_photo7"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/atrist2_photo8"/>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/no_result_message_photo2"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="no result"/>



        </RelativeLayout>


    </LinearLayout>
</ScrollView>